crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-mutate-global-in-render-helper-prop/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying a variable defined outside a component or hook is not allowed. Consider using an effect.

error.invalid-mutate-global-in-render-helper-prop.ts:8:4
   6 |     // called during render, and thus it's unsafe to mutate globals or call
   7 |     // other impure code.
>  8 |     global.property = true;
     |     ^^^^^^ value cannot be modified
   9 |     return <Item item={item} value={rand} />;
  10 |   };
  11 |   return <ItemList renderItem={renderItem} />;
